[package]
name = "opengl-imgui-hook-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
imgui = "0.8"
sdl2 = ">=0.34, <0.36"
detour = "0.8"

[dev-dependencies]
gl = "0.14.0"
imgui-opengl-renderer = "0.11.1"

[patch.crates-io]
mmap-fixed = { git = "https://github.com/khang06/rust-mmap-fixed-fixed.git", rev = "47116f5" }