[package]
name = "opengl3-imgui-hook-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "opengl3_imgui_hook"
crate-type = ["dylib"]

[dependencies]
imgui = "0.8"
imgui-opengl-renderer = "0.11.1"
detour = "0.8"
anyhow = "1"
gl_loader = "0.1"

[dependencies.windows]
version = "0.39"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_Networking_WinSock",
    "Win32_Security_Cryptography",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse"
]

[patch.crates-io]
mmap-fixed = { git = "https://github.com/khang06/rust-mmap-fixed-fixed.git", rev = "47116f5" }
